MODUL-1071 - corrections classes css pour le align des images

--- a/packages/modul-components/src/styles/mixins/_rte-internal.scss
+++ b/packages/modul-components/src/styles/mixins/_rte-internal.scss
@@ -5,7 +5,7 @@ $m--fr-active-background: #d6d6d6;
     font-style: normal;
 }
 
-img.fr-dib {
+.fr-dib.fr-dib {
     max-width: 100%;
 
     &.m--fr-image-block-left {
